# nrrd_twitch_bot

./: .gitignore  MANIFEST.in  pylintrc  requirements.txt  setup.cfg  setup.py
src/conf/: twitch.py.example
src/lib/: cli_entry.py  config.py  dispatcher.py  logger.py  plugins.py  run.py  tk.py  twitch.py  twitch_chat.py  twitch_oauth.py
src/nrrd_twitch_bot/: __init__.py  cli_entry.py  run.py
src/nrrd_twitch_bot/lib/: config.py  dispatcher.py  http_server.py  logger.py  plugins.py  run.py  tk.py  twitch_chat.py  twitch_helix.py  twitch_oauth.py
src/nrrd_twitch_bot/plugins/chat_commands/: dispatcher.py  plugin.py
src/nrrd_twitch_bot/plugins/chat_overlay/: bttv.py  dispatcher.py  overlay.py  plugin.py  tk.py
src/nrrd_twitch_bot/plugins/chat_overlay/static/: index.html  overlay.js  style.css
src/nrrd_twitch_bot/plugins/chat_overlay/templates/: overlay.js  style.css
src/plugins/chat_commands/: dispatcher.py
src/plugins/chat_overlay/: dispatcher.py
tests/: test_config.py  test_logger.py  test_tk.py  test_tk_logger.py
