[metadata]
name = nrrd_twitch_bot
author = DJ Nrrd
author_email = djnrrd@gmail.com
description = A bot for use on twitch.tv providing interactive chat features
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/djnrrd/nrrd_twitch_bot
project_urls =
    Bug Tracker = https://github.com/djnrrd/nrrd_twitch_bot/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Environment :: MacOS X
    Topic :: Communications :: Chat

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    basewebapi
    appdirs
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    game-lookup = lib.cli_entry:main
